--- a/frontend/src/components/Login.css
+++ b/frontend/src/components/Login.css
@@ -1,10 +1,10 @@
 /* login.css */
 
 .container {
-    max-width: 400px;
+    max-width: 100%;
     margin: 0 auto;
     padding: 20px;
-    border: 1px solid #ccc;
+    border: 1px solid #bf3333;
     border-radius: 5px;
     background-color: #f9f9f9;
   }
@@ -20,7 +20,7 @@
   
   input[type="email"],
   input[type="password"] {
-    width: 100%;
+    width: 70%;
     padding: 10px;
     border: 1px solid #ccc;
     border-radius: 3px;
